--- a/www/package.json
+++ b/www/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "LiveCentre",
+  "name": "live-center-app",
   "version": "1.0.0",
-  "description": "Live Centre HTML app",
+  "description": "Live Center HTML App",
   "keywords": [
     "react",
     "redux",
@@ -11,115 +11,55 @@
     "enzyme",
     "karma"
   ],
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "start": "gulp",
-    "build": "npm run test && gulp build --type production",
-    "deploy": "gulp deploy",
-    "test": "karma start",
-    "test:watch": "karma start --no-single-run"
-  },
-  "author": "The Future Group",
-  "license": "MIT",
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0",
-      "react"
-    ]
-  },
-  "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "babel-runtime": "^6.11.6",
-    "browserify": "^13.1.0",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.5.1",
-    "css-loader": "^0.25.0",
-    "del": "^2.2.2",
-    "enzyme": "^2.4.1",
-    "es6-promise": "^3.3.1",
-    "eslint-plugin-react": "^6.3.0",
-    "fetch-mock": "^5.1.5",
-    "file-loader": "^0.9.0",
-    "graceful-fs": "^4.1.6",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-if": "^2.0.1",
-    "gulp-ignore": "^2.0.1",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-jsonminify": "^1.0.0",
-    "gulp-less": "^3.1.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.3.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-ruby-sass": "^2.1.0",
-    "gulp-size": "^2.1.0",
-    "gulp-stylus": "^2.5.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.2",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.9",
-    "image-webpack-loader": "^2.0.0",
-    "isomorphic-fetch": "^2.2.1",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "lodash": "^4.16.1",
-    "loglevel": "^1.4.1",
-    "md5": "^2.2.1",
-    "mocha": "^3.0.2",
-    "object-assign": "^4.1.0",
-    "po-loader": "^0.3.1",
-    "po2json": "^0.4.4",
-    "postcss-loader": "^0.13.0",
-    "redux-devtools": "^3.3.1",
-    "redux-immutable-state-invariant": "^1.2.3",
-    "redux-mock-store": "^1.2.0",
-    "regenerator-runtime": "^0.9.5",
-    "run-sequence": "^1.2.2",
-    "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-stream": "^3.2.0",
-    "whatwg-fetch": "^1.0.0"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "set NODE_ENV=development && gulp",
+    "deploy": "set NODE_ENV=production && gulp deploy",
+    "webpack": "set NODE_ENV=development && gulp webpack",
+    "eslint": "set NODE_ENV=development && gulp eslint",
+    "check": "gulp --version"
   },
   "dependencies": {
-    "axios": "^0.14.0",
-    "deep-diff": "^0.3.4",
-    "i18next": "^3.4.3",
-    "node-uuid": "^1.4.7",
-    "object.omit": "^2.0.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-motion": "^0.4.4",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.5",
-    "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.6.0",
-    "redux-localstorage": "^0.4.1",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
-  }
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
+    "eslint-plugin-react": "^6.10.3",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cli": "^1.2.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-if": "^2.0.2",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sequence": "^0.4.6",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-stylus": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
+    "gulp-util": "^3.0.8",
+    "gulplog": "^1.0.0",
+    "node-static": "^0.7.9",
+    "stylus": "^0.54.5",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^3.2.0"
+  },
+  "author": "The Future Group",
+  "license": "MIT"
 }
