--- a/www/package.json
+++ b/www/package.json
@@ -14,11 +14,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "set NODE_ENV=development && gulp",
-    "deploy": "set NODE_ENV=production && gulp deploy",
-    "webpack": "set NODE_ENV=development && gulp webpack",
-    "eslint": "set NODE_ENV=development && gulp eslint",
-    "check": "gulp --version"
+    "build": "gulp",
+    "deploy": "gulp --production",
+    "eslint": "gulp eslint"
   },
   "dependencies": {
     "react": "^15.4.2",
