--- a/www/package.json
+++ b/www/package.json
@@ -29,12 +29,16 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "browser-sync": "^2.18.8",
+    "chai": "^3.5.0",
     "del": "^2.2.2",
+    "es6-promise": "^4.1.0",
     "eslint-plugin-react": "^6.10.3",
+    "fetch-mock": "^5.9.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cli": "^1.2.2",
@@ -53,9 +57,22 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "gulplog": "^1.0.0",
+    "karma": "^1.5.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.2.0",
     "node-static": "^0.7.9",
+    "sinon": "^2.1.0",
     "stylus": "^0.54.5",
     "vinyl-named": "^1.1.0",
+    "webpack": "^2.3.2",
     "webpack-stream": "^3.2.0"
   },
   "author": "The Future Group",
