--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
     "eslint": "gulp eslint"
   },
   "dependencies": {
+    "loglevel": "^1.4.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
