--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
     "eslint": "gulp eslint"
   },
   "dependencies": {
+    "i18next": "^7.1.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
@@ -57,6 +58,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "gulplog": "^1.0.0",
+    "i18next-po-loader": "^1.0.0",
     "karma": "^1.5.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
