--- a/www/package.json
+++ b/www/package.json
@@ -19,9 +19,11 @@
     "eslint": "gulp eslint"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "i18next": "^7.1.3",
     "loglevel": "^1.4.1",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
@@ -37,6 +39,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "browser-sync": "^2.18.8",
     "chai": "^3.5.0",
+    "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "es6-promise": "^4.1.0",
     "eslint-plugin-react": "^6.10.3",
@@ -73,7 +76,9 @@
     "mocha": "^3.2.0",
     "node-static": "^0.7.9",
     "sinon": "^2.1.0",
+    "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
+    "url-loader": "^0.5.8",
     "vinyl-named": "^1.1.0",
     "webpack": "^2.3.2",
     "webpack-stream": "^3.2.0"
