--- a/www/package.json
+++ b/www/package.json
@@ -75,6 +75,8 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
     "node-static": "^0.7.9",
+    "promise": "^7.1.1",
+    "request": "^2.81.0",
     "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
