--- a/www/package.json
+++ b/www/package.json
@@ -19,34 +19,37 @@
     "build:watch": "gulp --watch",
     "prod": "gulp --production",
     "deploy": "gulp deploy",
-    "lint": "gulp lint"
+    "lint": "gulp lint",
+    "serve": "gulp start"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "i18next": "^7.1.3",
+    "i18next": "^7.2.3",
     "loglevel": "^1.4.1",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
+    "material-ui": "^0.17.4",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.30.9",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-swipeable-views": "^0.12.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.8",
     "chai": "^3.5.0",
     "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "es6-promise": "^4.1.0",
     "eslint-plugin-react": "^6.10.3",
-    "fetch-mock": "^5.9.4",
+    "fetch-mock": "^5.10.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cli": "^1.2.2",
@@ -60,13 +63,13 @@
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sequence": "^0.4.6",
-    "gulp-sourcemaps": "^2.4.1",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "gulplog": "^1.0.0",
     "i18next-po-loader": "^1.0.0",
-    "karma": "^1.5.0",
+    "karma": "^1.6.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -85,7 +88,7 @@
     "stylus": "^0.54.5",
     "url-loader": "^0.5.8",
     "vinyl-named": "^1.1.0",
-    "webpack": "^2.3.2",
+    "webpack": "^2.4.1",
     "webpack-stream": "^3.2.0"
   },
   "author": "The Future Group",
