--- a/www/.eslintrc
+++ b/www/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module",
@@ -8,7 +9,8 @@
             "blockBindings": true,
             "generators": true,
             "modules": true,
-            "experimentalObjectRestSpread": true
+            "experimentalObjectRestSpread": true,
+            "classes":true
         }
     },
     rules: {
