--- a/www/package.json
+++ b/www/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
