Add thumbs and player

--- a/www/package.json
+++ b/www/package.json
@@ -24,12 +24,14 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "file-loader": "^0.11.1",
     "i18next": "^7.2.3",
     "loglevel": "^1.4.1",
     "material-ui": "^0.17.4",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.9",
     "react-dom": "^15.5.4",
+    "react-player": "^0.15.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
