--- a/www/package.json
+++ b/www/package.json
@@ -25,12 +25,13 @@
   "dependencies": {
     "axios": "^0.16.1",
     "file-loader": "^0.11.1",
-    "i18next": "^7.2.3",
+    "i18next": "^8.0.0",
     "loglevel": "^1.4.1",
     "material-ui": "^0.17.4",
     "react": "^15.5.4",
-    "react-bootstrap": "^0.30.9",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^15.5.4",
+    "react-flexbox-grid": "^1.0.2",
     "react-player": "^0.15.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
@@ -41,8 +42,8 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.4.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -56,7 +57,7 @@
     "fetch-mock": "^5.10.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-cli": "^1.2.2",
+    "gulp-cli": "^1.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.1.0",
     "gulp-eslint": "^3.0.1",
@@ -86,6 +87,8 @@
     "mocha": "^3.2.0",
     "node-static": "^0.7.9",
     "promise": "^7.1.1",
+    "prop-types": "^15.5.8",
+    "react-hls": "0.0.5",
     "request": "^2.81.0",
     "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
