--- a/www/package.json
+++ b/www/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^4.1.1",
     "react-swipeable-views": "^0.12.1",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "video.js": "^5.19.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
