--- a/www/package.json
+++ b/www/package.json
@@ -44,6 +44,7 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -51,6 +52,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.28.0",
     "del": "^2.2.2",
+    "enzyme": "^2.8.2",
     "es6-promise": "^4.1.0",
     "eslint-plugin-react": "^6.10.3",
     "fetch-mock": "^5.10.0",
@@ -87,7 +89,9 @@
     "node-static": "^0.7.9",
     "promise": "^7.1.1",
     "prop-types": "^15.5.8",
+    "react-addons-test-utils": "^15.5.1",
     "react-hls": "0.0.5",
+    "react-test-renderer": "^15.5.4",
     "request": "^2.81.0",
     "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
