--- a/www/package.json
+++ b/www/package.json
@@ -5,11 +5,10 @@
   "keywords": [
     "react",
     "redux",
+    "karma",
     "mocha",
     "chai",
-    "chai-enzyme",
-    "enzyme",
-    "karma"
+    "enzyme"
   ],
   "main": "index.js",
   "scripts": {
@@ -43,6 +42,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-istanbul": "^4.1.3",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
@@ -79,6 +79,7 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
