--- a/www/package.json
+++ b/www/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^4.1.1",
     "react-swipeable-views": "^0.12.1",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
