--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debug {
+            keyAlias 'livecentre'
+            keyPassword 'livecentre'
+            storeFile file('debug.keystore')
+            storePassword 'livecentre'
+        }
+        release {
+            keyAlias 'livecentre'
+            keyPassword 'livecentre'
+            storeFile file('release.keystore')
+            storePassword 'livecentre'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
-
     defaultConfig {
         applicationId "com.futureuniverse.livecentre"
         minSdkVersion 16
@@ -12,15 +25,22 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+            signingConfig signingConfigs.debug
+            zipAlignEnabled false
+        }
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            zipAlignEnabled true
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.8.0'
