Add Fabric integration.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     signingConfigs {
@@ -25,11 +40,6 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        debug {
-            minifyEnabled false
-            signingConfig signingConfigs.debug
-            zipAlignEnabled false
-        }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -47,6 +57,9 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'org.xwalk:xwalk_core_library:23.53.589.4'
     testCompile 'junit:junit:4.12'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
 }
 
 configurations.all {
