--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,26 @@ android {
             zipAlignEnabled true
         }
     }
+    productFlavors {
+        Development {
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-development"
+            resValue "string", "app_name", "Live Centre Dev"
+        }
+        QA {
+            applicationIdSuffix ".qa"
+            versionNameSuffix "-QA"
+            resValue "string", "app_name", "Live Centre QA"
+        }
+        Staging {
+            applicationIdSuffix ".stage"
+            versionNameSuffix "-staging"
+            resValue "string", "app_name", "Live Centre Stage"
+        }
+        Production {
+            resValue "string", "app_name", "Live Centre"
+        }
+    }
 }
 
 dependencies {
