--- a/www/.babelrc
+++ b/www/.babelrc
@@ -1,5 +1,8 @@
 {
-    "presets": ['es2015', 'react', 'stage-0'],
+    "presets": [
+        ['es2015', {'modules':false}], 
+        'react',
+        'stage-0'],
     "env": {
         "test": {
             "plugins": [
