--- a/www/package.json
+++ b/www/package.json
@@ -30,6 +30,7 @@
     "material-ui-password-field": "^1.1.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-draggable": "^2.2.6",
     "react-flexbox-grid": "^1.1.3",
     "react-player": "^0.17.2",
     "react-redux": "^5.0.4",
