--- a/www/package.json
+++ b/www/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^15.5.4",
     "react-draggable": "^2.2.6",
     "react-flexbox-grid": "^1.1.3",
+    "react-fullscreenable": "^2.2.0",
     "react-player": "^0.17.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
