--- a/www/package.json
+++ b/www/package.json
@@ -35,6 +35,7 @@
     "react-fullscreenable": "^2.2.0",
     "react-player": "^0.17.2",
     "react-redux": "^5.0.4",
+    "react-responsive-carousel": "^3.1.15",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-swipeable-views": "^0.12.1",
