--- a/www/package.json
+++ b/www/package.json
@@ -39,6 +39,7 @@
     "react-responsive-carousel": "^3.1.16",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-slick": "^0.14.11",
     "react-swipeable-views": "^0.12.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
