Add build number versioning

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,12 +32,15 @@ android {
     }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
+
+    def build_number = System.getenv("BUILD_NUMBER") ?: "1"
+
     defaultConfig {
         applicationId "com.futureuniverse.livecentre"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode build_number as Integer
+        versionName "1." + build_number
     }
     buildTypes {
         release {
