--- a/www/package.json
+++ b/www/package.json
@@ -43,6 +43,9 @@
     "react-swipeable-views": "^0.12.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.0",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.1"
   },
   "devDependencies": {
@@ -101,6 +104,8 @@
     "react-addons-test-utils": "^15.5.1",
     "react-hls": "0.0.6",
     "react-test-renderer": "^15.5.4",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-logger": "^3.0.6",
     "request": "^2.81.0",
     "sinon": "^2.2.0",
     "style-loader": "^0.17.0",
