--- a/www/package.json
+++ b/www/package.json
@@ -33,14 +33,15 @@
     "react-draggable": "^2.2.6",
     "react-flexbox-grid": "^1.1.3",
     "react-fullscreenable": "^2.2.1",
+    "react-motion": "^0.5.0",
     "react-player": "^0.18.0",
     "react-redux": "^5.0.5",
     "react-responsive": "^1.3.0",
     "react-responsive-carousel": "^3.1.16",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-slick": "^0.14.11",
     "react-router-transitions": "^2.2.1",
+    "react-slick": "^0.14.11",
     "react-swipeable-views": "^0.12.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
