--- a/www/package.json
+++ b/www/package.json
@@ -40,6 +40,7 @@
     "react-responsive-carousel": "^3.1.16",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-transition": "^0.1.1",
     "react-router-transitions": "^2.2.1",
     "react-slick": "^0.14.11",
     "react-swipeable-views": "^0.12.2",
