--- a/www/package.json
+++ b/www/package.json
@@ -33,6 +33,7 @@
     "react-draggable": "^2.2.6",
     "react-flexbox-grid": "^1.1.3",
     "react-fullscreenable": "^2.4.0",
+    "react-masonry-component": "^5.0.7",
     "react-motion": "^0.5.0",
     "react-player": "^0.18.0",
     "react-redux": "^5.0.5",
