--- a/www/package.json
+++ b/www/package.json
@@ -32,9 +32,9 @@
     "react-dom": "^15.5.4",
     "react-draggable": "^2.2.6",
     "react-flexbox-grid": "^1.1.3",
-    "react-masonry-component": "^5.0.7",
     "react-fullscreenable": "^2.2.1",
     "react-html5video": "^2.1.0",
+    "react-masonry-component": "^5.0.7",
     "react-motion": "^0.5.0",
     "react-player": "^0.18.0",
     "react-redux": "^5.0.5",
@@ -50,6 +50,7 @@
     "redux-persist": "^4.8.0",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
+    "screenfull": "^3.2.0",
     "socket.io-client": "^2.0.2"
   },
   "devDependencies": {
