--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-                  android:windowSoftInputMode="adjustResize">
-            <intent-filter>
+                android:configChanges="orientation|screenSize"
+                android:windowSoftInputMode="stateHidden">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
