--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "deep-diff": "^0.3.8",
     "file-loader": "^0.11.2",
     "i18next": "^8.4.0",
     "loglevel": "^1.4.1",
