--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,14 +33,12 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
 
-    def build_number = System.getenv("BUILD_NUMBER") ?: "1"
-
     defaultConfig {
         applicationId "com.futureuniverse.livecentre"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode build_number as Integer
-        versionName "1." + build_number
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
