--- a/www/.eslintrc
+++ b/www/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "extends": "airbnb", 
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 6,
@@ -13,7 +14,7 @@
             "classes":true
         }
     },
-    rules: {
+    "rules": {
         "arrow-parens": 2,
         "curly": 2,
         "no-var": 2,
@@ -22,7 +23,12 @@
         "prefer-spread": 2,
         "prefer-template": 2,
         "require-yield": 2,
-        semi: ["error", "always"]
+        "indent": ["error", 4],
+        "semi": ["error", "always"],
+        "no-restricted-syntax":"off",
+        "no-underscore-dangle":["error", { "allowAfterThis": true }],
+        "valid-typeof":"off",
+        "no-unused-expressions":"off"
     },
     "env": {
         "browser": true,
