--- a/www/.vscode/settings.json
+++ b/www/.vscode/settings.json
@@ -7,5 +7,6 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/node_modules": true
-    }
+    },
+    "eslint.enable": true
 }
