--- a/www/package.json
+++ b/www/package.json
@@ -71,7 +71,11 @@
     "del": "^2.2.2",
     "enzyme": "^2.8.2",
     "es6-promise": "^4.1.0",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.1.0",
+    "eslint-plugin-react": "^7.1.0",
     "fetch-mock": "^5.11.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
