LIVE-4 Added prettier package, updated eslint config.

--- a/www/package.json
+++ b/www/package.json
@@ -19,7 +19,8 @@
     "prod": "gulp --production",
     "deploy": "gulp deploy",
     "lint": "gulp lint",
-    "serve": "gulp start"
+    "serve": "gulp start",
+    "fix": "eslint --fix app/scripts/actions"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -75,6 +76,7 @@
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
+    "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.1.0",
     "fetch-mock": "^5.11.0",
     "gulp": "^3.9.1",
@@ -108,6 +110,7 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2",
     "node-static": "^0.7.9",
+    "prettier": "^1.5.2",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
     "react-addons-test-utils": "^15.5.1",
