LIVE-4 lots of lint

--- a/www/.eslintrc
+++ b/www/.eslintrc
@@ -1,43 +1,44 @@
 {
-    'extends': 'airbnb',
-    'parser': 'babel-eslint',
-    'parserOptions': {
-        'ecmaVersion': 6,
-        'sourceType': 'module',
-        'ecmaFeatures': {
-            'jsx': true,
-            'arrowFunctions': true,
-            'blockBindings': true,
-            'generators': true,
-            'modules': true,
-            'experimentalObjectRestSpread': true,
-            'classes':true
+    "extends": "airbnb",
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true,
+            "arrowFunctions": true,
+            "blockBindings": true,
+            "generators": true,
+            "modules": true,
+            "experimentalObjectRestSpread": true,
+            "classes":true
         }
     },
-    'rules': {
-        'arrow-parens': 2,
-        'curly': 2,
-        'no-var': 2,
-        'prefer-arrow-callback': 2,
-        'prefer-const': 2,
-        'prefer-spread': 2,
-        'prefer-template': 2,
-        'require-yield': 2,
-        'indent': ['error', 4],
-        'semi': ['error', 'always'],
-        'no-restricted-syntax':'off',
-        'no-underscore-dangle':['error', { 'allowAfterThis': true }],
-        'valid-typeof':'off',
-        'no-unused-expressions':'off'
+    "rules": {
+        "arrow-parens": 2,
+        "curly": 2,
+        "no-var": 2,
+        "prefer-arrow-callback": 2,
+        "prefer-const": 2,
+        "prefer-spread": 2,
+        "prefer-template": 2,
+        "require-yield": 2,
+        "indent": ["error", 4],
+        "semi": ["error", "always"],
+        "no-restricted-syntax":"off",
+        "no-underscore-dangle":["error", { "allowAfterThis": true }],
+        "valid-typeof":"off",
+        "no-unused-expressions":"off",
+        "react/forbid-prop-types": "off"
     },
-    'env': {
-        'browser': true,
-        'node': true,
-        'es6': true,
-        'jasmine': true
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true,
+        "jasmine": true
     },
-    'plugins': [
-        'react',
-        'prettier'
+    "plugins": [
+        "react",
+        "prettier"
     ]
 }
