--- a/www/package.json
+++ b/www/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "deep-diff": "^0.3.8",
+    "express": "^4.15.2",
     "file-loader": "^0.11.2",
     "i18next": "^8.4.0",
     "loglevel": "^1.4.1",
@@ -54,7 +55,8 @@
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
     "screenfull": "^3.2.0",
-    "socket.io-client": "^2.0.2"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
