--- a/www/package.json
+++ b/www/package.json
@@ -56,7 +56,8 @@
     "redux-thunk": "^2.2.0",
     "screenfull": "^3.2.0",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "video-react": "^0.8.5"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
