--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,5 @@
-# This is a sample build configuration for Javascript (Node.js).
-# Check our guides at https://confluence.atlassian.com/x/14UWN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
+# Media Centre Pipeline (CI)
+
 image: node:6.9.4
 
 pipelines:
@@ -10,7 +7,7 @@ pipelines:
     - step:
         caches:
           - node
-        script: # Modify the commands below to build your repository.
+        script:
           - cd www
           - npm install
           - npm install --only=dev
