--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,6 +12,6 @@ pipelines:
           - npm install
           - npm install --only=dev
           - npm test
-          - npm build
-          - npm deploy
+          - npm run build
+          - npm run deploy
           - echo "DONE!"
