--- a/www/package.json
+++ b/www/package.json
@@ -104,6 +104,7 @@
     "gulp-util": "^3.0.8",
     "gulplog": "^1.0.0",
     "i18next-po-loader": "^1.0.0",
+    "jsdoc": "^3.5.3",
     "karma": "^1.7.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
@@ -121,7 +122,6 @@
     "react-addons-test-utils": "^15.5.1",
     "react-hls": "0.0.6",
     "react-test-renderer": "^15.5.4",
-    
     "request": "^2.81.0",
     "sinon": "^2.3.2",
     "style-loader": "^0.18.2",
