--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,6 +11,6 @@ pipelines:
           - cd www
           - npm install
           - npm test
-          - npm run build
-          - npm run deploy
+          - npm run build || exit 1
+          - npm run deploy || exit 1
           - echo "DONE!"
