--- a/www/package.json
+++ b/www/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^15.5.4",
     "react-draggable": "^2.2.6",
     "react-flexbox-grid": "^1.1.3",
+    "react-fontawesome": "^1.6.1",
     "react-fullscreenable": "^2.2.1",
     "react-html5video": "^2.1.0",
     "react-masonry-component": "^5.0.7",
@@ -51,11 +52,11 @@
     "react-swipeable-views": "^0.12.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.8.0",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "redux-immutable-state-invariant": "^2.0.0",
     "screenfull": "^3.2.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
