--- a/www/package.json
+++ b/www/package.json
@@ -51,6 +51,7 @@
     "react-slick": "^0.14.11",
     "react-swipeable-views": "^0.12.3",
     "react-tap-event-plugin": "^2.0.1",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
