--- a/www/package.json
+++ b/www/package.json
@@ -36,6 +36,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-draggable": "^2.2.6",
+    "react-file-input": "^0.2.5",
     "react-flexbox-grid": "^1.1.3",
     "react-fontawesome": "^1.6.1",
     "react-fullscreenable": "^2.2.1",
