--- a/www/.eslintrc
+++ b/www/.eslintrc
@@ -26,7 +26,7 @@
         "indent": ["error", 4],
         "semi": ["error", "always"],
         "no-restricted-syntax":"off",
-        "no-underscore-dangle":["error", { "allowAfterThis": true }],
+        "no-underscore-dangle":"off",
         "valid-typeof":"off",
         "no-unused-expressions":"off",
         "no-plusplus": ["error", {"allowForLoopAfterthoughts": true}],
