--- a/www/.eslintrc
+++ b/www/.eslintrc
@@ -29,6 +29,7 @@
         "no-underscore-dangle":"off",
         "valid-typeof":"off",
         "no-unused-expressions":"off",
+        "no-case-declarations":"off",
         "no-plusplus": ["error", {"allowForLoopAfterthoughts": true}],
         "max-len": "off",
         "radix": ["error", "as-needed"],
