--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,10 +8,4 @@ pipelines:
         caches:
           - node
         script:
-          - set -e
-          - cd www
-          - npm install || exit 1
-          - npm test
-          - npm run build || exit 1
-          - npm run deploy || exit 1
-          - echo "DONE!"
+          - bash ci/build.sh
