--- a/lc/android/app/build.gradle
+++ b/lc/android/app/build.gradle
@@ -102,8 +102,8 @@ def enableProguardInReleaseBuilds = false
 android {
   signingConfigs {
     config {
-      keyAlias 'imrfutureuniverse'
-      keyPassword 'futureuniverse'
+      keyAlias 'imrfuturegroup'
+      keyPassword 'futuregroup'
       storeFile file('release.keystore')
       storePassword 'futureuniverse'
     }
@@ -128,7 +128,7 @@ android {
     abi {
       reset()
       enable enableSeparateBuildPerCPUArchitecture
-      universalApk false // If true, also generate a universal APK
+      universalApk true // If true, also generate a universal APK
       include "armeabi-v7a", "x86"
     }
   }
