--- a/www/native/.gitignore
+++ b/www/native/.gitignore
@@ -48,12 +48,15 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-src/**/*.bak.js
-
-#ignore some test folders and files
-__snapshots__
-coverage
-*.snap
+ fastlane/report.xml
+ fastlane/Preview.html
+ fastlane/screenshots
+-src/**/*.bak.js
++native/**/*.bak.js
+ 
+ #ignore some test folders and files
+ __snapshots__
+ coverage
+ *.snap
+-*.bak.js
++*.log
